# wellfounded

./: .cursorrules  .gitignore  CLAUDE.md  DATA_FLOW.md  Makefile  README.md  openapi.json
.github/workflows/: evals.yml
apps/api/: README.md  alembic.ini  config.py  main.py  pyproject.toml
apps/api/audit/: __init__.py  deps.py  middleware.py  models.py  repository.py  request_id.py  writer.py
apps/api/auth/: __init__.py  deps.py  email.py  models.py  repository.py  routes.py  schemas.py  sessions.py  tokens.py  webauthn_routes.py
apps/api/cases/: __init__.py  models.py  repository.py  router.py  schemas.py
apps/api/country_conditions/: __init__.py  docx_hyperlink.py  docx_memo.py  e2e_stub.py  graph.py  models.py  prompts.py  repository.py  schemas.py  service.py
apps/api/country_conditions/templates/: country_conditions.docx
apps/api/db/: __init__.py  base.py  session.py
apps/api/db/migrations/: env.py
apps/api/db/migrations/versions/: a1b2c3d4e5f6_orgs_and_users.py  cc18cd30d200_baseline.py  f6e5d4c3b2a1_audit_log_entries.py  g7h8i9j0k1l2_magic_link_tokens_and_sessions.py  h2b3c4d5e6f7_webauthn_mfa.py  i1j2k3l4m5n6_source_library_retrieval.py  j0k1l2m3n4o5_llm_call_records.py  k1l2m3n4o5p6_case_file_tables.py  m1n2o3p4q5r6_country_conditions_memos.py  n3o4p5q6r7s8_transcripts_declaration_drafts.py  o5p6q7r8s9t0_interview_audio_transcription.py  p6q7r8s9t0u1_transcript_error_message.py
apps/api/declarations/: __init__.py  apply_resolution.py  e2e_stub.py  elements.py  flags.py  graph.py  models.py  prompts.py  repository.py  schemas.py  service.py  validators.py
apps/api/encryption/: __init__.py  service.py
apps/api/evals/: __init__.py  baseline_compare.py  calibration_compare.py  declaration_baseline_compare.py  declaration_criteria.py  declaration_format.py  eval_audit.py  fixtures.py  paths.py  runner.py  view.py
apps/api/evals/scorers/: __init__.py  base.py  country_conditions_draft.py  declaration_quality_live.py  exact_citation_match.py  rubric_llm_judge.py  wer.py
apps/api/llm/: __init__.py  client.py  hashing.py  models.py  prompts.py  retry.py  types.py
apps/api/orgs/: __init__.py  models.py  repository.py  router.py  schemas.py
apps/api/retrieval/: __init__.py  cache.py  embed.py  models.py  passage_search.py  rerank.py  schemas.py
apps/api/retrieval/ingestion/: __init__.py  amnesty.py  base.py  cpj.py  document_upsert.py  euaa_coi.py  freedom_house.py  hrw.py  html_passages.py  http_fetch.py  launch_catalog.py  pdf_text.py  state_dept.py  unhcr.py  uscirf.py
apps/api/scripts/: __init__.py  benchmark_retrieval.py  e2e_seed_country_conditions.py  generate_declaration_baseline_manifest.py  generate_declaration_docx_template.py  generate_declaration_eval_fixtures.py  generate_tts_fixtures.py  ingest.py  refresh_living_sources.py
apps/api/storage/: keys.py  s3_client.py
apps/api/tests/: conftest.py  test_audit.py  test_auth_magic_link.py  test_baseline_compare.py  test_cases_api.py  test_country_conditions_api.py  test_country_conditions_docx_export.py  test_declaration_docx_export.py  test_declarations_graph.py  test_evals_calibration_compare.py  test_evals_declaration_baseline_compare.py  test_evals_declaration_format.py  test_evals_declaration_quality_live.py  test_evals_rubric_judge.py  test_evals_runner.py  test_ingestion_amnesty.py  test_ingestion_cpj.py  test_ingestion_euaa_coi.py  test_ingestion_freedom_house.py  test_ingestion_hrw.py  test_ingestion_state_dept.py  test_ingestion_unhcr.py  test_ingestion_uscirf.py  test_llm_client.py  test_orgs_repository.py  test_placeholder.py  test_retrieval_search.py  test_transcription_api.py
apps/api/tests/fixtures/: amnesty_eritrea.html  cpj_eritrea.html  declaration_eritrea_journalist.json  freedom_house_eritrea_2024.html  hrw_eritrea_2024.html  state_dept_eritrea_2024.html  transcription_stub_es.json  transcription_stub_fr.json  transcription_stub_ht.json  transcription_stub_prs.json  transcription_stub_ti.json  transcription_stub_zh.json
apps/api/tests/fixtures/webauthn/: authentication_ec2.json  registration_none_attestation.json
apps/api/transcription/: __init__.py  models.py  repository.py  schemas.py  service.py  validators.py  whisper.py
apps/api/translation/: __init__.py  nllb.py  pipeline.py  review.py
apps/api/wf_docx/: __init__.py  declaration.py  ooxml_annotations.py  section_labels.py
apps/api/wf_docx/templates/: declaration.docx
apps/web/: .gitignore  eslint.config.mjs  next.config.ts  package-lock.json  package.json  playwright.config.ts  vitest.config.ts
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/e2e/: country-conditions.spec.ts  declarations.spec.ts  global-setup.ts
apps/web/lib/: api-base.ts  cc-schemas.ts  declaration-schemas.ts  server-api.ts  (+1 more)
docs/: 01_business_plan.md  02_landing_page.html  03_platform_page.html  04_mvp_prd.md  05_cursor_build_plan.md
docs/checkpoints/: week-5.md
docs/decisions/: ADR-001-pgvector-index.md
evals/: README.md
evals/calibration/: declaration_practitioner_scores.json
evals/results/: .gitignore  README.md  baseline-claude-opus-4-7.json  baseline-declaration-claude-opus-4-7.json  baseline-live-claude-opus-4-7.json  baseline-transcription-wer.json
evals/rubrics/: declaration_v1.md
infra/local/: docker-compose.yml
(+96 files in other folders)
