[tool.poetry]
name = "wellfounded-api"
version = "0.1.0"
description = "Wellfounded FastAPI service"
authors = ["Wellfounded"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
fastapi = "0.115.6"
uvicorn = { extras = ["standard"], version = "0.32.1" }
sqlalchemy = { extras = ["asyncio"], version = "2.0.36" }
asyncpg = "0.30.0"
alembic = "1.14.0"
pydantic = "2.10.3"
pydantic-settings = "2.6.1"
structlog = "24.4.0"
httpx = "0.28.1"
anthropic = "0.42.0"
openai = "1.59.6"
langchain = "0.3.13"
langgraph = "0.2.59"
langchain-anthropic = "0.3.1"
langchain-openai = "0.2.14"
langchain-community = "0.3.13"
langchain-postgres = "0.0.12"
python-multipart = "0.0.20"
python-docx = "1.1.2"
pgvector = "0.2.5"
boto3 = "1.35.76"
cryptography = "44.0.0"
pytest = "8.3.4"
pytest-asyncio = "0.25.0"
mypy = "1.13.0"
ruff = "0.8.4"
# Pydantic EmailStr (auth request bodies) pulls this in at import time.
email-validator = "^2.2.0"
webauthn = "2.2.0"
# Tolerant HTML parsing for State.gov and other source sites with irregular markup.
beautifulsoup4 = "^4.12.0"
# PDF text extraction for USCIRF annual reports, UNHCR data-portal downloads, and EUAA COI PDFs.
pypdf = "5.1.0"
redis = "^5.2.1"
# LangGraph durable checkpoints for resumable country-conditions memo generation (psycopg driver).
# checkpoint-postgres 3.x ships a version-check that warns when langgraph <1.0 is installed.
# Upgrading langgraph to 1.x requires upgrading the full langchain ecosystem (langchain,
# langchain-core, langchain-anthropic, langchain-openai, langchain-community, langchain-postgres)
# because langchain 0.3.x hard-caps langchain-core<0.4.0 and langgraph 1.x needs >=0.4.0.
# That ecosystem upgrade is deferred to a dedicated task. The warning is suppressed below.
langgraph-checkpoint-postgres = ">=3.0.0,<4.0.0"
psycopg = { version = ">=3.2.0", extras = ["pool"] }

[tool.poetry.group.dev.dependencies]
types-beautifulsoup4 = "^4.12.0"

[tool.poetry.scripts]
ingest = "scripts.ingest:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py312"
src = ["."]
exclude = ["db/migrations/versions"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
exclude = ["db/migrations/versions"]

[[tool.mypy.overrides]]
module = "pgvector.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "docx.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "webauthn.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "sentence_transformers.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
# One event loop for the session so the lazily created async engine pool stays valid.
# Suppress the DeprecationWarning from langgraph-checkpoint-postgres 3.x that fires when langgraph
# is on 0.x. The warning is accurate but the fix (langchain ecosystem upgrade) is deferred.
asyncio_default_fixture_loop_scope = "session"
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning:langgraph.checkpoint.postgres",
]
